2016-08-01         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* mpfr.c (default_prec): Add new static variable to show current PREC
	setting in effect.
	(init_mpfr, set_PREC): Save mpfr_set_default_prec argument in
	default_prec.
	(do_mpfr_func): If the argument's precision exceeds the default precision,
	boost the result's precision to match it. This fixes a bug where
	we used to copy the argument's precision, regardless of whether it
	was higher or lower than the PREC setting.

2016-07-23         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* builtin.c (do_print): Improve logic for formatting
	numeric values.

2016-07-19         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* eval.c (set_LINT): Simplify the code considerably.

2016-07-19         Arnold D. Robbins     <arnold@skeeve.com>

	* awkgram.y (shadow_funcs): Change test at end to be
	`lintfunc == r_fatal' instead of `lintfunc != warning'.
	Thank to Andrew Schorr for the suggestion.

2016-07-18         Arnold D. Robbins     <arnold@skeeve.com>

	* main.c (locale_dir): New variable, init to LOCALEDIR (set by
	configure).
	(set_locale_stuff): Move calls to bindtextdomain and
	textdomain to here; they must be done after calling setlocale.
	Use locale_dir instead of LOCALEDIR.
	(main): Move call to set_locale_stuff() to before parsing arguments.
	Check for GAWK_LOCALE_DIR env var and use it if there. If doing
	locale debugging, call set_locale_stuff again if arg parsing changed
	the locale.

	Unrelated:

	* dfa.c: Sync with GNU grep.

	Unrelated:

	* config.sub: Updated from GNULIB.

2016-07-17         Arnold D. Robbins     <arnold@skeeve.com>

	* eval.c (set_LINT): Reset lintfunc to `warning' for LINT="invalid".
	Thanks to Andy Schorr for the report.

2016-07-08         Arnold D. Robbins     <arnold@skeeve.com>

	* dfa.c: Sync with GNU grep.

2016-07-01         Arnold D. Robbins     <arnold@skeeve.com>

	* array.c (value_info): Print something reasonable when stfmt